# agents

./: .env.example  agentdemowithcrewai.py  multiagentdemowithcrewai.py  new-blog-post.md  newblog.md
ATS_Resume/: .env  README.md  requirements.txt  streamlit_app.py
ATS_Resume/crew_app/: agents.py  crew.py  tasks.py  tools.py
ATS_Resume/crew_app/file_tools/: __init__.py  file_loader.py
a2aagentcommunication/: invoice_generator.ipynb  invoice_processor.ipynb  requirements.txt
a2aagentcommunication/LANGGRAPH_INVOICE_PROJECT/invoice-env/: invoice_processor.ipynb
a2aagentcommunication/invoice-env/: pyvenv.cfg
a2afinaldemo/: .gitignore  README.md  pyproject.toml
a2afinaldemo/config/: openai_env_template.txt
a2afinaldemo/data/: sales_marketing.csv
a2afinaldemo/scripts/: run_pipeline.py  start_agent.py  start_all_agents.py
a2afinaldemo/src/: a2a_servers.py  a2a_utils.py  orchestrator.py
a2afinaldemo/src/agents/: autogen_agent.py  crewai_agent.py  langchain_agent.py
a2afinaldemo/src/ui/: app.py
agenticragusingcrewai/RAG-AGENT/: .env  agenticragwithcrewai.py  demo.ipynb
travelagentwithlanggraph/: .env  app.py  requirements.txt  travelagent_langgraph.ipynb
travelagentwithlanggraph/.streamlit/: secrets.toml
travelagentwithlanggraph/src/: app_old.py
travelagentwithlanggraph/src/travel_agent/: graph.py  main.py  state.py
travelagentwithlanggraph/src/travel_agent/agents/: agents.py  itinerary_agent.py  router.py  tools.py
travelagentwithlanggraph/src/travel_agent/tools/: geolocation_tools.py  (+2 more)
videosummarizerphidata/Video-Summarizer-phidata/: .env
